--- a/client/app/popup.less
+++ b/client/app/popup.less
@@ -24,7 +24,6 @@
 
     label {
         font-size: 16px;
-        margin-left: 20px;
 
         table {
             td {
@@ -38,6 +37,10 @@
 
         &.label-small {
             font-size: 13px;
+        }
+
+        &.label-tab {
+            margin-left: 20px;
         }
     }
 
@@ -204,6 +207,10 @@
             border-bottom-color: @main-text-color;
         }
 
+    }
+
+    .neon-well {
+        padding: 9px;
     }
 }
 
