--- a/client/components/barChart/barChartHeaders.html
+++ b/client/components/barChart/barChartHeaders.html
@@ -5,5 +5,5 @@
     </div>
 </div>
 
-<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-links-popup-key="generateLinksPopupKey" remove="removeFilter"
+<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-links-popup-key="getLinksPopupKey" remove="removeFilter"
     show-links-popup-button="showLinksPopupButton" visualization-id="visualizationId"></filter-notification>
