--- a/client/components/filterBuilder/filterBuilder.less
+++ b/client/components/filterBuilder/filterBuilder.less
@@ -19,7 +19,7 @@
     padding: 10px;
     overflow: auto;
 
-    .header-container-large {
+    .text-container {
         min-height: 35px;
     }
 
