--- a/client/components/lineChart/lineChartHeaders.html
+++ b/client/components/lineChart/lineChartHeaders.html
@@ -1,12 +1,12 @@
-<div class="legend pull-left" ng-class="{true: 'open', false: ''}[active.legend.show]" ng-show="active.layers.length">
-    <div class="legend-toggle header-text" ng-click="toggleLegend()">
+<div class="legend dropdown-legend pull-left" ng-class="{true: 'open', false: ''}[active.legend.show]" ng-show="active.layers.length">
+    <div class="legend-toggle text" ng-click="toggleLegend()">
         <span>Legend</span>
     </div>
     <div class="divider" ng-show="active.legend.show"></div>
     <div class="legend-details" ng-show="active.legend.show">
         <div class="legend-layer" ng-repeat="(chartID, chartColorMappings) in colorMappings">
-            <div class="legend-header" ng-click="toggleLegendChart(chartID)">
-                <span class="legend-title header-text" ng-bind="getTitleFromMapping(chartColorMappings[0])"></span>
+            <div class="legend-title" ng-click="toggleLegendChart(chartID)">
+                <span class="text" ng-bind="getTitleFromMapping(chartColorMappings[0])"></span>
                 <span class="glyphicon glyphicon-chevron-down pull-right" ng-show="!active.legend.layers[chartID].show"></span>
                 <span class="glyphicon glyphicon-chevron-up pull-right" ng-show="active.legend.layers[chartID].show"></span>
             </div>
@@ -22,5 +22,5 @@
 
 <span class="no-data pull-left" ng-show="noData">No data for current filters.</span>
 
-<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-links-popup-key="getDateKeyForLinksPopupButton" remove="removeBrush"
+<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-links-popup-key="getLinksPopupDateKey" remove="removeFilter"
     show-links-popup-button="showLinksPopupButton" visualization-id="visualizationId"></filter-notification>
