--- a/client/components/networkGraph/networkGraphDisplay.html
+++ b/client/components/networkGraph/networkGraphDisplay.html
@@ -2,7 +2,7 @@
 
 <div class="clearfix"></div>
 
-<div class="header-container legend" ng-show="(active.legend.length > 0)">
+<div class="text-container legend" ng-show="(active.legend.length > 0)">
     <span class="legend-item" title="Legend">
         <span class="legend-text">Legend:</span>
     </span>
