--- a/client/components/optionsMenu/optionsMenu.html
+++ b/client/components/optionsMenu/optionsMenu.html
@@ -1,6 +1,6 @@
-<div class="chart-options pull-right">
-    <a class="chart-options-button btn collapsed" data-toggle="collapse" data-target=".{{uniqueVisualizationOptions}} .popover" data-animation=false ng-click="toggleOptionsDisplay()">
-        <span class="header-text pull-left" ng-bind="getButtonText()" ng-show="showButtonText()" title="Open/Close the Options Menu"></span>
+<div class="options-menu pull-right">
+    <a class="options-menu-button btn collapsed" data-toggle="collapse" data-target=".{{uniqueVisualizationOptions}} .popover" data-animation=false ng-click="toggleOptionsDisplay()">
+        <span class="text pull-left" ng-bind="getButtonText()" ng-show="showButtonText()" title="Open/Close the Options Menu"></span>
         <span class="glyphicon glyphicon-cog" title="Open/Close the Options Menu"></span>
         <span class="caret"></span>
     </a>
