--- a/client/components/textCloud/textCloudHeaders.html
+++ b/client/components/textCloud/textCloudHeaders.html
@@ -1,2 +1,2 @@
-<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-text="createFilterText" get-links-popup-key="generateLinksPopupKey" remove="removeFilter"
+<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-text="createFilterText" get-links-popup-key="getLinksPopupKey" remove="removeFilter"
     show-links-popup-button="showLinksPopupButton" visualization-id="visualizationId"></filter-notification>
