--- a/client/components/timeline/timelineDisplay.html
+++ b/client/components/timeline/timelineDisplay.html
@@ -1,4 +1,4 @@
-<div class="header-container" ng-show="active.OPENCPU.enableMmpp && active.granularity === HOUR && !active.displayEventProbabilities && !active.showNoDataError">
+<div class="text-container" ng-show="active.OPENCPU.enableMmpp && active.granularity === HOUR && !active.displayEventProbabilities && !active.showNoDataError">
     <a class="btn" ng-click="runMMPP()">
         Click to run event probability analysis (this may take a few minutes) <span class="glyphicon glyphicon-transfer"></span>
     </a>
