--- a/client/components/timeline/timelineHeaders.html
+++ b/client/components/timeline/timelineHeaders.html
@@ -62,5 +62,5 @@
     </ul>
 </div>
 
-<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-text="createFilterText" get-links-popup-key="getLinksPopupKey" remove="clearBrush"
+<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-text="createFilterText" get-links-popup-key="getLinksPopupDateKey" remove="removeFilter"
     show-links-popup-button="showLinksPopupButton" visualization-id="visualizationId"></filter-notification>
