--- a/client/components/dataTable/dataTableOptions.html
+++ b/client/components/dataTable/dataTableOptions.html
@@ -2,10 +2,10 @@
     <label>Tools (Hide & Reorder Columns)</label>
     <div class="btn-group">
         <label class="btn btn-default" ng-class="{true: 'active', false: ''}[active.gridOptions.showToolPanel]">
-            <input type="radio" style="display:none" ng-model="active.gridOptions.showToolPanel" ng-value="true" ng-change="handleToggleToolPanel()">Show
+            <input type="radio" style="display:none" ng-model="active.gridOptions.showToolPanel" ng-value="true" ng-change="toggleToolPanel()">Show
         </label>
         <label class="btn btn-default" ng-class="{true: '', false: 'active'}[active.gridOptions.showToolPanel]">
-            <input type="radio" style="display:none" ng-model="active.gridOptions.showToolPanel" ng-value="false" ng-change="handleToggleToolPanel()">Hide
+            <input type="radio" style="display:none" ng-model="active.gridOptions.showToolPanel" ng-value="false" ng-change="toggleToolPanel()">Hide
         </label>
     </div>
     <div class="clearfix"></div>
@@ -15,6 +15,7 @@
     <label>Sort By Field</label>
     <div class="input-group">
         <select class="form-control" ng-model="active.sortByField" ng-disabled="!(active.fields.length > 0)" ng-options="field.prettyName for field in active.fields" ng-change="handleChangeSortField()">
+            <option value="">None</option>
         </select>
 
         <div class="input-group-btn">
