--- a/client/components/lineChart/lineChart.less
+++ b/client/components/lineChart/lineChart.less
@@ -121,96 +121,13 @@
 }
 
 .lineChartDirective {
-    .legend-container {
-        .legend {
-            background-color: @visualization-box-background;
-            border: @main-border;
-            border-radius: 4px;
-            position: absolute;
-
-            &.open {
-                min-width: 175px;
-            }
-
-            .divider {
-                height: 1px;
-                margin: 0 0 9px 0;
-                overflow: hidden;
-                background-color: @border-color;
-            }
-
-            .legend-toggle {
-                padding: 5px;
-            }
-
-            .legend-details {
-                overflow: auto;
-
-                .legend-layer {
-                    margin-bottom: 10px;
-
-                    .legend-header {
-                        cursor: pointer;
-                        position: relative;
-                        padding: 5px;
-
-                        .legend-title {
-                            margin-right: 25px;
-                            font-size: 14px;
-                        }
-
-                        .glyphicon {
-                            color: @main-text-color;
-                            position: absolute;
-                            right: 5px;
-                            top: 50%;
-                            transform: translate(0, -50%);
-                        }
-                    }
-
-                    .legend-item {
-                        margin-left: 20px;
-                        cursor: pointer;
-
-                        &.legend-hidden{
-                            color: @main-text-color;
-
-                            .legend-icon{
-                                background: #e1e1e1 !important;
-                            }
-                        }
-                    }
-                }
-            }
-
-            .header-text {
-                cursor: pointer;
-
-                .glyphicon {
-                    line-height: normal;
-                }
-            }
-        }
-
-        .legend-item {
-            border: @main-border;
-            border-radius: 5px;
-            font-size: 12px;
-            margin-top: 0px;
-            margin-right: 5px;
-            opacity: .8;
-            padding: 3px;
-            display: block;
-        }
-    }
-
     .no-data {
         color: @main-text-color;
         font-weight: bold;
         margin-top: 40px;
     }
 
-    .chart-options {
+    .options-menu {
         .popover {
             max-width: none;
         }
