--- a/client/components/map/map.less
+++ b/client/components/map/map.less
@@ -31,95 +31,19 @@
     .options-container {
         z-index: 1010;
 
-        .chart-options {
+        .options-menu {
             .popover {
                 max-width: none;
             }
         }
     }
 
-    .legend-container {
-        z-index: 1005;
-
-        .legend {
-            background-color: @visualization-box-background;
-            border: @main-border;
-            border-radius: 4px;
-
-            .divider {
-                height: 1px;
-                margin: 0 0 9px 0;
-                overflow: hidden;
-                background-color: @border-color;
-            }
-
-            .legend-toggle {
-                padding: 5px;
-            }
-
-            .legend-details {
-                overflow: auto;
-
-                .legend-layer {
-                    margin-bottom: 10px;
-
-                    .legend-header {
-                        cursor: pointer;
-                        position: relative;
-                        padding: 5px;
-
-                        .legend-title {
-                            margin-right: 25px;
-                            font-size: 14px;
-                        }
-
-                        .glyphicon {
-                            color: @main-text-color;
-                            position: absolute;
-                            right: 5px;
-                            top: 50%;
-                            transform: translate(0, -50%);
-                        }
-                    }
-
-                    .node-title {
-                        color: @main-text-color;
-                        font-size: 14px;
-                        font-weight: bold;
-                        line-height: 1.33;
-                        text-transform: uppercase;
-                        margin-left: 20px;
-                    }
-
-                    .legend-item {
-                        margin-left: 20px;
-                    }
-                }
-            }
-
-            .header-text {
-                cursor: pointer;
-            }
-        }
-
-        .legend-item {
-            border: @main-border;
-            border-radius: 5px;
-            font-size: 14px;
-            margin-top: 0px;
-            margin-right: 5px;
-            opacity: .8;
-            padding: 3px;
-            display: block;
-            font-size: 12px;
-        }
-    }
-
-    .filter-container {
+    .headers-container {
         position: absolute;
         top: 30px;
         left: 35px;
         right: 10px;
+        z-index: 1005;
 
         .filter-reset {
             background-color: @visualization-box-background-transparent;
