--- a/client/components/map/mapHeaders.html
+++ b/client/components/map/mapHeaders.html
@@ -1,12 +1,12 @@
-<div class="legend pull-left" ng-class="{true: 'open', false: ''}[active.legend.show]" ng-show="active.layers.length">
-    <div class="legend-toggle header-text" ng-click="toggleLegend()">
+<div class="legend dropdown-legend pull-left" ng-class="{true: 'open', false: ''}[active.legend.show]" ng-show="active.layers.length">
+    <div class="legend-toggle text" ng-click="toggleLegend()">
         <span>Legend</span>
     </div>
     <div class="divider" ng-show="active.legend.show"></div>
     <div class="legend-details" ng-show="active.legend.show">
         <div class="legend-layer" ng-repeat="legendLayer in active.legend.layers">
-            <div class="legend-header" ng-click="toggleLegendLayer($index)">
-                <span class="legend-title header-text" ng-bind="legendLayer.name"></span>
+            <div class="legend-title" ng-click="toggleLegendLayer($index)">
+                <span class="text" ng-bind="legendLayer.name"></span>
                 <span class="glyphicon glyphicon-chevron-down pull-right" ng-show="!legendLayer.show"></span>
                 <span class="glyphicon glyphicon-chevron-up pull-right" ng-show="legendLayer.show"></span>
             </div>
@@ -35,5 +35,5 @@
     </div>
 </div>
 
-<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-links-popup-key="getBoundsKeyForLinksPopupButton" remove="removeFilter"
+<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-links-popup-key="getLinksPopupBoundsKey" remove="removeFilter"
     show-links-popup-button="showLinksPopupButton" visualization-id="visualizationId"></filter-notification>
