--- a/client/components/visualizationSuperclass/visualizationSuperclass.html
+++ b/client/components/visualizationSuperclass/visualizationSuperclass.html
@@ -2,8 +2,8 @@
 <div class="superclass-implementation">
     <!-- An ng-controller is added before compilation. -->
     <div class="visualization {{type + 'Directive'}}" active="active" bindings="bindings" functions="functions">
-        <div class="header-container options-container" ng-hide="bindings.hideHeader">
-            <div class="title header-text pull-left" ng-bind="createTitle()" title="{{createTitle()}}" style="max-width: 0px;"></div>
+        <div class="text-container options-container" ng-hide="bindings.hideHeader">
+            <div class="header text pull-left" ng-bind="createTitle()" title="{{createTitle()}}" style="max-width: 0px;"></div>
 
             <options-menu parent-element="element" export-function="getExportData" resize-menu="resizeOptionsMenu" button-text="functions.createMenuText" show-button-text="functions.showMenuText">
                 <translation-options ng-if="translationsOn" on-translate="handleToggleTranslations"
@@ -51,7 +51,7 @@
         <div class="clearfix"></div>
 
         <!-- Shrink the container instead of hiding it in order to trigger a resize event. -->
-        <div class="header-container filter-container legend-container" ng-class="{true: 'shrink', false: ''}[functions.hideHeaders()]">
+        <div class="text-container headers-container" ng-class="{true: 'shrink', false: ''}[functions.hideHeaders()]">
             <visualization-headers class="visualization-headers"></visualization-headers>
         </div>
 
