--- a/client/components/ganttChart/ganttChartOptions.html
+++ b/client/components/ganttChart/ganttChartOptions.html
@@ -61,3 +61,15 @@
     </select>
     </div>
 </div>
+
+<div class="form-group">
+    <label>Record Limit</label>
+    <div class="input-group">
+        <input type="number" min="1" class="form-control" ng-model="active.limit" required>
+        <div class="input-group-btn">
+            <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleChangeLimit()">
+                <span class="glyphicon glyphicon-refresh"></span>
+            </button>
+        </div>
+    </div>
+</div>
