--- a/client/components/layerOptions/layerOptions.html
+++ b/client/components/layerOptions/layerOptions.html
@@ -52,28 +52,26 @@
             <div class="layer-options-row">
                 <div class="form-group layer-options-col">
                     <label>Database</label>
-                    <select class="form-control" ng-cancel-drag ng-model="layer.database" ng-options="database.prettyName for database in layer.databases" ng-required="true" ng-disabled="layer.databases.length < 2" ng-change="functions.updateTables(layer)"></select>
+                    <select class="form-control" ng-cancel-drag ng-model="layer.database" ng-options="database.prettyName for database in layer.databases track by database.name" ng-required="true" ng-disabled="layer.databases.length < 2" ng-change="functions.updateTables(layer)"></select>
                 </div>
-
                 <div class="form-group layer-options-col">
                     <label>Table</label>
-                    <select class="form-control" ng-cancel-drag ng-model="layer.table" ng-options="table.prettyName for table in layer.tables" ng-required="true" ng-disabled="layer.tables.length < 2" ng-change="functions.updateFields(layer)"></select>
+                    <select class="form-control" ng-cancel-drag ng-model="layer.table" ng-options="table.prettyName for table in layer.tables track by table.name" ng-required="true" ng-disabled="layer.tables.length < 2" ng-change="functions.updateFields(layer)"></select>
                 </div>
 
                 <div class="form-group layer-options-col layer-options-col-wide">
                     <label>Unshared Filter</label>
                     <div class="input-group">
-                        <select class="form-control col-half" ng-cancel-drag ng-model="layer.unsharedFilterField" ng-options="field.prettyName for field in layer.fields" ng-required="false" ng-disabled="active.layers.fields.length < 2">
+                        <select class="form-control col-half" ng-cancel-drag ng-model="layer.unsharedFilterField" ng-options="field.prettyName for field in layer.fields track by field.columnName" ng-required="false" ng-disabled="active.layers.fields.length < 2">
                             <option selected value="">None</option>
                         </select>
                         <input type="text" class="form-control col-half" placeholder="{{'Filter for ' + layer.unsharedFilterField.prettyName + '...'}}" ng-cancel-drag ng-model="layer.unsharedFilterValue" ng-disabled="!layer.unsharedFilterField.columnName">
                     </div>
                 </div>
             </div>
-
             <visualization-layer-options layer="layer" ng-include="'components/' + type + '/' + type + 'LayerOptions.html'"></visualization-layer-options>
 
-            <div class="layer-options-error" ng-show="layer.error" ng-bind="layer.error"></div>
+            <div class="layer-options-error"  ng-bind="layer.error"></div>
         </div>
     </div>
 </div>
