NEON-1966 THOR-99 Updated the Map, Network Graph, and Scatter Plot to work with array fields.  Now multiple points/nodes are created for data records containing more than one lat/lon, x/y, or node id.  Also fixed a few minor bugs in the network graph including the flagged nodes issue.

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -1060,6 +1060,12 @@ html {
             font-weight: bold;
             padding: 0 5px;
         }
+
+        .layer-options-message {
+            color: @main-text-color;
+            font-weight: bold;
+            padding: 0 5px;
+        }
     }
 }
 
