--- a/client/components/layerOptions/layerOptions.html
+++ b/client/components/layerOptions/layerOptions.html
@@ -74,6 +74,7 @@
             <visualization-layer-options layer="layer" ng-include="'components/' + type + '/' + type + 'LayerOptions.html'"></visualization-layer-options>
 
             <div class="layer-options-error" ng-show="layer.error" ng-bind="layer.error"></div>
+            <div class="layer-options-message" ng-show="layer.message" ng-bind="layer.message"></div>
         </div>
     </div>
 </div>
