--- a/client/components/networkGraph/networkGraphOptions.html
+++ b/client/components/networkGraph/networkGraphOptions.html
@@ -1,5 +1,5 @@
 <div class="form-group" ng-hide="bindings.hideAdvancedOptions">
-    <label>Node Field</label>
+    <label>Node Field (Required)</label>
     <select class="form-control" ng-model="active.nodeField" ng-options="field.prettyName for field in active.fields" ng-required="true" ng-disabled="(active.fields.length == 0)" ng-change="handleChangeNodeField()">
     </select>
 </div>
@@ -66,20 +66,20 @@
         <input type="text" class="form-control" placeholder="{{'Enter ' + active.nodeField.prettyName + '...'}}" ng-model="active.selectedNodeId" ng-disabled="!(active.nodeField)">
         <div class="input-group-btn">
             <button type="button" class="btn btn-default refresh" title="Select Node" ng-click="selectNodeAndNetworkFromNodeId()">
-                <span class="glyphicon glyphicon-plus"></span>
+                <span class="glyphicon glyphicon-screenshot"></span>
             </button>
         </div>
     </div>
 
     <div class="input-group">
-        <select class="form-control" ng-model="active.selectedNodeId" ng-options="nodeId for nodeId in active.existingNodeIds track by nodeId" ng-required="false" ng-disabled="(active.existingNodeIds.length == 0) || !(active.nodeField)" ng-change="selectNodeAndNetworkFromNodeId()">
-            <option value="" ng-bind="'Select ' + active.nodeField.prettyName + '...'"></option>
-        </select>
         <div class="input-group-btn">
-            <button type="button" class="btn btn-default refresh" title="Refresh Node List" ng-click="queryForNodeList()">
+            <button type="button" class="btn btn-default refresh" title="Load Node List" ng-disabled="!(active.nodeField)" ng-click="queryForNodeList()">
                 <span class="glyphicon glyphicon-refresh"></span>
             </button>
         </div>
+        <select class="form-control" ng-model="active.selectedNodeId" ng-options="nodeId for nodeId in active.existingNodeIds track by nodeId" ng-required="false" ng-disabled="(active.existingNodeIds.length == 0) || !(active.nodeField)" ng-change="selectNodeAndNetworkFromNodeId()">
+            <option value="" ng-bind="active.existingNodeIds.length ? 'Select node...' : 'Please load node list'"></option>
+        </select>
     </div>
 </div>
 
@@ -99,7 +99,7 @@
     <label>Single-Link & Unlinked Networks</label>
     <div class="btn-group">
         <label class="btn btn-default" ng-class="{true: 'active', false: ''}[active.hideSimpleNetworks]" title="Hide Single-Link Networks and Unlinked Nodes">
-            <input type="radio" style="display:none" ng-model="active.hideSimpleNetworks" ng-value="true" ng-change="handleToggleHideSimpleNetworks"()/>Hide
+            <input type="radio" style="display:none" ng-model="active.hideSimpleNetworks" ng-value="true" ng-change="handleToggleHideSimpleNetworks()"/>Hide
         </label>
         <label class="btn btn-default" ng-class="{true: '', false: 'active'}[active.hideSimpleNetworks]" title="Show Single-Link Networks and Unlinked Nodes">
             <input type="radio" style="display:none" ng-model="active.hideSimpleNetworks" ng-value="false" ng-change="handleToggleHideSimpleNetworks()"/>Show
