--- a/client/components/scatterPlot/scatterPlotOptions.html
+++ b/client/components/scatterPlot/scatterPlotOptions.html
@@ -12,7 +12,8 @@
 
 <div class="form-group">
     <label>Text Field</label>
-    <select class="form-control" ng-model="active.textField" ng-options="field.prettyName for field in active.fields" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-change="handleChangeTextField()">
+    <select class="form-control" ng-model="active.textField" ng-options="field.prettyName for field in active.fields" ng-required="false" ng-disabled="!(active.fields.length > 0)" ng-change="handleChangeTextField()">
+        <option value="">None</option>
     </select>
 </div>
 
