THOR-101 Updated all the other visualizations so that they work with array fields.  Visualizations that have date fields now use the aggregate-arrays-by-element option so that they count individual dates in date arrays instead of trying to count the arrays themselves (which would cause an error).

--- a/client/components/newsFeed/newsFeed.less
+++ b/client/components/newsFeed/newsFeed.less
@@ -41,6 +41,12 @@
             background-color: @callout;
         }
 
+        div {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
         .neon-sprite {
             margin-right: 5px;
         }
