--- a/client/components/layerOptions/layerOptions.html
+++ b/client/components/layerOptions/layerOptions.html
@@ -62,7 +62,7 @@
                 <div class="form-group layer-options-col layer-options-col-wide">
                     <label>Unshared Filter</label>
                     <div class="input-group">
-                        <select class="form-control col-half" ng-cancel-drag ng-model="layer.unsharedFilterField" ng-options="field.prettyName for field in layer.fields track by field.columnName" ng-required="false" ng-disabled="active.layers.fields.length < 2">
+                        <select class="form-control col-half" ng-cancel-drag ng-model="layer.unsharedFilterField" ng-options="field.prettyName for field in layer.fields" ng-required="false" ng-disabled="active.layers.fields.length < 2">
                             <option selected value="">None</option>
                         </select>
                         <input type="text" class="form-control col-half" placeholder="{{'Filter for ' + layer.unsharedFilterField.prettyName + '...'}}" ng-cancel-drag ng-model="layer.unsharedFilterValue" ng-disabled="!layer.unsharedFilterField.columnName">
