--- a/client/components/lineChart/lineChartLayerOptions.html
+++ b/client/components/lineChart/lineChartLayerOptions.html
@@ -1,14 +1,14 @@
 <div class="layer-options-row">
     <div class="form-group layer-options-col" ng-class="{true: '', false: 'has-error'}[layer.dateField.columnName]">
         <label>Date Field</label>
-        <select class="form-control" ng-cancel-drag ng-model="layer.dateField" ng-options="field.prettyName for field in layer.fields track by field.columnName" ng-required="true" ng-disabled="!(layer.fields.length > 0)" ng-change="validateLayerFields(layer)">
+        <select class="form-control" ng-cancel-drag ng-model="layer.dateField" ng-options="field.prettyName for field in layer.fields " ng-required="true" ng-disabled="!(layer.fields.length > 0)" ng-change="validateLayerFields(layer)">
         <option value="">None</option>
         </select>
     </div>
 
     <div class="form-group layer-options-col">
         <label>Group Field</label>
-        <select class="form-control" ng-cancel-drag ng-model="layer.groupField" ng-options="field.prettyName for field in layer.fields track by field.columnName" ng-required="true" ng-disabled="!(layer.fields.length > 0)">
+        <select class="form-control" ng-cancel-drag ng-model="layer.groupField" ng-options="field.prettyName for field in layer.fields " ng-required="true" ng-disabled="!(layer.fields.length > 0)">
             <option value="">None</option>
         </select>
     </div>
@@ -26,7 +26,7 @@
 
     <div class="form-group layer-options-col" ng-show="layer.aggregationType !== 'count'" ng-class="{true: '', false: 'has-error'}[layer.aggregationField.columnName]">
         <label>Agg. Field</label>
-        <select class="form-control" ng-cancel-drag ng-model="layer.aggregationField" ng-required="false" ng-disabled="!(layer.fields.length > 0)" ng-options="field.prettyName for field in layer.fields track by field.columnName" ng-change="validateLayerFields(layer)">       
+        <select class="form-control" ng-cancel-drag ng-model="layer.aggregationField" ng-required="false" ng-disabled="!(layer.fields.length > 0)" ng-options="field.prettyName for field in layer.fields " ng-change="validateLayerFields(layer)">       
         </select>
     </div>
 </div>
