--- a/client/components/scatterPlot/scatterPlotOptions.html
+++ b/client/components/scatterPlot/scatterPlotOptions.html
@@ -1,6 +1,6 @@
 <div class="form-group">
     <label>X-Axis Field</label>
-    <select class="form-control" ng-model="active.xAxisField" ng-options="field.prettyName for field in active.fields track by field.columnName" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-change="handleChangeXAxisField()">
+    <select class="form-control" ng-model="active.xAxisField" ng-options="field.prettyName for field in active.fields " ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-change="handleChangeXAxisField()">
     </select>
 </div>
 
