--- a/client/components/newsFeed/newsFeedOptions.html
+++ b/client/components/newsFeed/newsFeedOptions.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="form-group">
-    <label>News Limit</label>
+    <label>News Fetch Limit</label>
     <div class="input-group">
         <input type="number" min="1" class="form-control" ng-model="active.limit" required>
         <div class="input-group-btn">
