THOR-105 Created legend visualization to show list of data fields and values specified in dashboard configuration file.  Added optional arguments to visualization superclass filtering functions to allow legend to filter on flexible list of filter fields.

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -28,6 +28,7 @@
 @import "../components/filterTray/filterTray.less";
 @import "../components/ganttChart/ganttChart.less";
 @import "../components/import/import.less";
+@import "../components/legend/legend.less";
 @import "../components/lineChart/lineChart.less";
 @import "../components/map/map.less";
 @import "../components/networkGraph/networkGraph.less";
