--- a/client/app/sprites.css
+++ b/client/app/sprites.css
@@ -11,7 +11,7 @@ Icon classes can be used entirely standalone. They are named after their origina
 */
 .icon-Error_16x16 {
   background-image: url(../assets/images/spritesheet.png);
-  background-position: -336px -52px;
+  background-position: -336px -86px;
   width: 16px;
   height: 16px;
 }
@@ -23,43 +23,43 @@ Icon classes can be used entirely standalone. They are named after their origina
 }
 .icon-FilterTray_34x34 {
   background-image: url(../assets/images/spritesheet.png);
-  background-position: -256px -256px;
+  background-position: -320px 0px;
   width: 34px;
   height: 34px;
 }
 .icon-Help_34x34 {
   background-image: url(../assets/images/spritesheet.png);
-  background-position: -222px -256px;
+  background-position: -286px -256px;
   width: 34px;
   height: 34px;
 }
 .icon-Neon_16x16 {
   background-image: url(../assets/images/spritesheet.png);
-  background-position: -320px -52px;
+  background-position: -320px -86px;
   width: 16px;
   height: 16px;
 }
 .icon-Neon_60x34 {
   background-image: url(../assets/images/spritesheet.png);
-  background-position: -128px -256px;
+  background-position: -192px -256px;
   width: 60px;
   height: 34px;
 }
 .icon-Options_34x34 {
   background-image: url(../assets/images/spritesheet.png);
-  background-position: -188px -256px;
+  background-position: -252px -256px;
   width: 34px;
   height: 34px;
 }
 .icon-Translated_20x20 {
   background-image: url(../assets/images/spritesheet.png);
-  background-position: -320px -32px;
+  background-position: -320px -66px;
   width: 20px;
   height: 20px;
 }
 .icon-Twitter_32x32 {
   background-image: url(../assets/images/spritesheet.png);
-  background-position: -320px 0px;
+  background-position: -320px -34px;
   width: 32px;
   height: 32px;
 }
@@ -93,51 +93,57 @@ Icon classes can be used entirely standalone. They are named after their origina
   width: 64px;
   height: 64px;
 }
-.icon-LineChart64 {
+.icon-Legend64 {
   background-image: url(../assets/images/spritesheet.png);
   background-position: -128px -192px;
   width: 64px;
   height: 64px;
 }
-.icon-Map64 {
+.icon-LineChart64 {
   background-image: url(../assets/images/spritesheet.png);
   background-position: 0px 0px;
   width: 64px;
   height: 64px;
 }
-.icon-News64 {
+.icon-Map64 {
   background-image: url(../assets/images/spritesheet.png);
   background-position: -256px 0px;
   width: 64px;
   height: 64px;
 }
-.icon-OPS64 {
+.icon-News64 {
   background-image: url(../assets/images/spritesheet.png);
   background-position: -256px -64px;
   width: 64px;
   height: 64px;
 }
-.icon-OpsClock64 {
+.icon-OPS64 {
   background-image: url(../assets/images/spritesheet.png);
   background-position: -256px -128px;
   width: 64px;
   height: 64px;
 }
-.icon-PieChart64 {
+.icon-OpsClock64 {
   background-image: url(../assets/images/spritesheet.png);
   background-position: -256px -192px;
   width: 64px;
   height: 64px;
 }
-.icon-ScatterPlot64 {
+.icon-PieChart64 {
   background-image: url(../assets/images/spritesheet.png);
   background-position: 0px -256px;
   width: 64px;
   height: 64px;
 }
-.icon-Sunburst64 {
+.icon-ScatterPlot64 {
   background-image: url(../assets/images/spritesheet.png);
   background-position: -64px -256px;
+  width: 64px;
+  height: 64px;
+}
+.icon-Sunburst64 {
+  background-image: url(../assets/images/spritesheet.png);
+  background-position: -128px -256px;
   width: 64px;
   height: 64px;
 }
