THOR-102 THOR-103 Created the Document Viewer visualization to show highlighted text.  Required minor changes to Visualization Superclass API.

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -24,6 +24,7 @@
 @import "../components/barChart/barChart.less";
 @import "../components/dataTable/dataTable.less";
 @import "../components/databaseConfig/databaseConfig.less";
+@import "../components/documentViewer/documentViewer.less";
 @import "../components/filterBuilder/filterBuilder.less";
 @import "../components/filterTray/filterTray.less";
 @import "../components/ganttChart/ganttChart.less";
