--- a/client/components/networkGraph/networkGraphHeaders.html
+++ b/client/components/networkGraph/networkGraphHeaders.html
@@ -1,5 +1,5 @@
 <div class="pull-left">
-    <label type="button" class="btn btn-default header-item" title="{{'Load ' + (active.selectedNodeIds.length ? 'Selected' : 'All')}}"
+    <label type="button" class="btn btn-default" title="{{'Load ' + (active.selectedNodeIds.length ? 'Selected' : 'All')}}"
         ng-bind="'Load ' + (active.selectedNodeIds.length ? 'Selected' : 'All')" ng-click="queryForNetworkGraph()"/>
 </div>
 
