--- a/client/components/timeline/timelineOptions.html
+++ b/client/components/timeline/timelineOptions.html
@@ -47,10 +47,10 @@
     <label>Animation Controls</label>
     <div class="btn-group">
         <label class="btn btn-default" ng-class="{true: 'active', false: ''}[active.showAnimationControls]">
-            <input type="radio" style="display:none" ng-model="active.showAnimationControls" ng-value="true">Show
+            <input type="radio" style="display:none" ng-model="active.showAnimationControls" ng-value="true" ng-click="handleToggleShowAnimationControls()">Show
         </label>
         <label class="btn btn-default" ng-class="{true: '', false: 'active'}[active.showAnimationControls]">
-            <input type="radio" style="display:none" ng-model="active.showAnimationControls" ng-value="false">Hide
+            <input type="radio" style="display:none" ng-model="active.showAnimationControls" ng-value="false" ng-click="handleToggleShowAnimationControls()">Hide
         </label>
     </div>
     <div class="clearfix"></div>
