--- a/client/components/timeline/timeline.less
+++ b/client/components/timeline/timeline.less
@@ -68,23 +68,22 @@
         top: 5px;
 
         .dropdown-toggle {
+            color: @main-text-color;
             cursor: pointer;
             font-family: "Open Sans", Helvetica, arial, sans-serif;
-            color: @main-text-color;
             font-size: 16px;
             /* Set the height to match the height of the animation controls. */
             height: 34px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
 
             &:hover {
                 color: @accent-bright;
             }
 
-            i {
-                margin-left: 5px;
-
-                .glyphicon {
-                    margin-right: 0px;
-                }
+            .glyphicon {
+                margin-right: 5px;
             }
         }
 
