--- a/client/components/timeline/timelineHeaders.html
+++ b/client/components/timeline/timelineHeaders.html
@@ -1,24 +1,7 @@
-<div class="animation-controls pull-left">
-    <span class="form-group" ng-if="active.showAnimationControls">
-        <span class="btn-group">
-            <label class="btn btn-default header-item" role="button" title="{{(active.animatingTime) ? 'Pause' : ((active.animationFrame > active.animationStartFrame) ? 'Resume' : 'Play')}}"
-                ng-click="(active.animatingTime) ? pauseTimeAnimation() : playTimeAnimation()">
-                <span class="glyphicon" ng-class="{true: 'glyphicon-pause', false: 'glyphicon-play-circle'}[active.animatingTime]"></span>
-            </label>
-            <label class="btn btn-default header-item" role="button" title="Step" ng-click="stepTimeAnimation()">
-                <span class="glyphicon glyphicon-step-forward"></span>
-            </label>
-            <label class="btn btn-default header-item" role="button" title="Stop" ng-click="stopTimeAnimation()">
-                <span class="glyphicon glyphicon-stop"></span>
-            </label>
-        </span>
-    </span>
-</div>
-
 <div class="neon-datetimepicker dropdown pull-left">
-    <div class="dropdown-toggle" role="button" data-toggle="dropdown" data-target="#" href="#" title="{{'From ' + (active.startDateForDisplay || '?') + ' to ' + (active.endDateForDisplay || '?')}}">
+    <div class="dropdown-toggle" role="button" data-toggle="dropdown" data-target="#" href="#" title="{{'From ' + (active.startDateForDisplay || '?') + ' to ' + (active.endDateForDisplay || '?') + ' (Click to Change)'}}">
+        <span class="glyphicon glyphicon-calendar"></span>
         <span ng-bind="(active.startDateForDisplay || '?') + ' - ' + (active.endDateForDisplay || '?')"></span>
-        <i class="glyphicon glyphicon-calendar"></i>
     </div>
 
     <ul class="dropdown-menu" role="menu">
@@ -30,8 +13,8 @@
                 <th>
                     <span><label>End Date</label></span>
                     <span class="pull-right">
-                        <button class="btn btn-default header-item save-button disabled" ng-click="handleDateTimePickSave()">Save</button>
-                        <button class="btn btn-default header-item" ng-click="handleDateTimePickCancel()">Cancel</button>
+                        <button class="btn btn-default save-button disabled" ng-click="handleDateTimePickSave()">Save</button>
+                        <button class="btn btn-default" ng-click="handleDateTimePickCancel()">Cancel</button>
                     </span>
                 </th>
             </tr>
@@ -60,6 +43,23 @@
             </tr>
         </table>
     </ul>
+</div>
+
+<div class="animation-controls pull-left">
+    <span class="form-group" ng-if="active.showAnimationControls">
+        <span class="btn-group">
+            <label class="btn btn-default" role="button" title="{{(active.animatingTime) ? 'Pause' : ((active.animationFrame > active.animationStartFrame) ? 'Resume' : 'Play')}}"
+                ng-click="(active.animatingTime) ? pauseTimeAnimation() : playTimeAnimation()">
+                <span class="glyphicon" ng-class="{true: 'glyphicon-pause', false: 'glyphicon-play-circle'}[active.animatingTime]"></span>
+            </label>
+            <label class="btn btn-default" role="button" title="Step" ng-click="stepTimeAnimation()">
+                <span class="glyphicon glyphicon-step-forward"></span>
+            </label>
+            <label class="btn btn-default" role="button" title="Stop" ng-click="stopTimeAnimation()">
+                <span class="glyphicon glyphicon-stop"></span>
+            </label>
+        </span>
+    </span>
 </div>
 
 <filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-text="createFilterText" get-links-popup-key="getLinksPopupDateKey" remove="removeFilter"
