--- a/client/components/linksPopup/linksPopup.html
+++ b/client/components/linksPopup/linksPopup.html
@@ -13,7 +13,7 @@
                     <ul>
                         <li ng-repeat="link in links[key]">
                             <a ng-href="{{link.url}}" target="{{link.tab}}" title="Open {{link.name}} in a new tab" ng-click="logLinkEvent(link.name)">
-                                <img alt="{{link.name}}" class="center-block" ng-src="{{link.image}}">
+                                <img class="icon-container" alt="{{link.name}}" ng-src="{{link.image}}">
                                 <span class="text-uppercase" ng-bind="link.name"></span>
                             </a>
                         </li>
