Annotation highlight colors in the document viewer are now determined by the annotation type (if one is set).  These colors can be defined with the color maps in the dashboard configuration file.

--- a/client/components/documentViewer/documentViewer.less
+++ b/client/components/documentViewer/documentViewer.less
@@ -42,6 +42,16 @@
                 }
             }
 
+            .highlight-color {
+                border-radius: 2px;;
+                display: inline-block;
+                height: 12px;
+                margin-right: 2px;
+                position: relative;
+                top: 1px;
+                width: 12px;
+            }
+
             .document-well {
                 margin: 5px 0px 0px;
                 padding: 4px;
