Operators for items and types in the legend visualization can now be defined in the dashboard configuration file.

--- a/client/components/legend/legend.less
+++ b/client/components/legend/legend.less
@@ -20,6 +20,11 @@
 
     ul {
         list-style-type: none;
+        /* Override default list padding. */
+        padding: 0px;
+    }
+
+    .padded-list {
         padding-left: 20px;
     }
 
